LB03/NextCloud/nextcloud/service.yaml
apiVersion: v1
kind: Service
...
spec:
  ports:
    - port: 80
  selector:
 component: app
